# MeedyaSuite-core

./: Cargo.toml  LICENSE  README.md
.claude/: CLAUDE.md  CONTEXT.md  HISTORY.md  MEMORY.md  PROMPTS.md  ProjectBrief_Chat.claude  settings.json
.github/workflows/: ci.yml
bindings/swift/: README.md
bindings/wasm/: README.md
crates/meedya-codecs/: Cargo.toml
crates/meedya-codecs/src/: audio_codec.rs  channel_config.rs  classify.rs  container.rs  error.rs  ffprobe.rs  hdr.rs  lib.rs  mediainfo.rs  registry.rs  spatial.rs  spatial_type.rs  subtitle_codec.rs  tool_path.rs  video_codec.rs
crates/meedya-core/: Cargo.toml
crates/meedya-core/src/: lib.rs
crates/meedya-db/: Cargo.toml
crates/meedya-db/src/: client.rs  error.rs  export.rs  lib.rs  models.rs
crates/meedya-fingerprint/: Cargo.toml
crates/meedya-fingerprint/src/: acoustid.rs  chromaprint.rs  error.rs  lib.rs  replaygain.rs
crates/meedya-library-import/: Cargo.toml
crates/meedya-library-import/src/: cuesheet.rs  itunes_xml.rs  lib.rs
crates/meedya-lyrics/: Cargo.toml
crates/meedya-lyrics/src/: embed.rs  error.rs  lib.rs  lrc.rs  lyrics.rs  lyricsfile.rs  lyricsfile_export.rs  lyricsfile_lrc.rs  lyricsfile_ttml.rs  sidecar.rs
crates/meedya-lyrics/src/provider/: lrclib.rs  mod.rs
crates/meedya-lyrics/tests/: lyricsfile_integration.rs
crates/meedya-metadata/: Cargo.toml  tags.toml
crates/meedya-metadata/config/: tags.toml
crates/meedya-metadata/src/: codec_tags.rs  common_tags.rs  credentials.rs  error.rs  json_path.rs  lib.rs  match_scoring.rs  playback_bounds.rs  registry.rs  tag_io.rs  tag_registry.rs  template.rs  traits.rs  types.rs  writer.rs
crates/meedya-providers/: Cargo.toml
crates/meedya-providers/src/: cover_art.rs  credentials.rs  error.rs  extra_keys.rs  lib.rs  match_scoring.rs  rate_limiter.rs  traits.rs  types.rs
crates/meedya-providers/src/providers/: apple_music.rs  apple_podcasts.rs  apple_tv.rs  deezer.rs  eidr.rs  isrc.rs  iswc.rs  itunes_store.rs  mod.rs  musicbrainz.rs  omdb.rs  spotify.rs  thetvdb.rs  tmdb.rs
crates/meedya-tags-extended/: Cargo.toml  quick_tags.toml
crates/meedya-tags-extended/src/: ai_content.rs  conflict_policy.rs  genre_hierarchy.rs  io.rs  lib.rs  meedya_atom.rs  mik.rs  model.rs  play_history.rs  quick_tag.rs  sidecar_json.rs  standard.rs  stems.rs
docs/: API.md  cross-repo-issues.md  integration-assessment.md
