[package]
name = "meedya-codecs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MeedyaSuite-core — codec detection via FFprobe and MediaInfo, format handling utilities"

[features]
default = []

[dependencies]
meedya-metadata = { path = "../meedya-metadata", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "time"] }
tracing = "0.1"
which = "7"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
