[package]
name = "meedya-codecs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Meedya Core — codec definitions, container formats, and media classification"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
