[package]
name = "meedya-fingerprint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Meedya Core — AcoustID fingerprinting and ReplayGain loudness analysis"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
meedya-metadata = { workspace = true }
