[package]
name = "meedya-fingerprint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MeedyaSuite-core — audio fingerprinting (Chromaprint/AcoustID) and ReplayGain analysis"

[features]
default = ["chromaprint", "acoustid"]
chromaprint = ["rusty-chromaprint", "symphonia", "symphonia-format-isomp4", "symphonia-codec-alac", "symphonia-codec-aac", "symphonia-bundle-flac", "symphonia-bundle-mp3"]
acoustid = ["reqwest"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

# Chromaprint fingerprinting
rusty-chromaprint = { version = "0.2", optional = true }
symphonia = { version = "0.5", optional = true, default-features = false }
symphonia-format-isomp4 = { version = "0.5", optional = true }
symphonia-codec-alac = { version = "0.5", optional = true }
symphonia-codec-aac = { version = "0.5", optional = true }
symphonia-bundle-flac = { version = "0.5", optional = true }
symphonia-bundle-mp3 = { version = "0.5", optional = true }

# AcoustID API
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
