[package]
name = "meedya-fingerprint"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Meedya Core — AcoustID fingerprinting, Chromaprint generation (opt-in), and ReplayGain loudness analysis"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }

# Optional — gated behind the `chromaprint` feature. Pulling
# `rusty-chromaprint` + `symphonia` unconditionally would force
# every consumer (e.g. apps that only want the AcoustID HTTP
# client or the ReplayGain analyser) to pay the substantial
# compile-time + binary-size cost of the audio decode stack.
rusty-chromaprint = { workspace = true, optional = true }
symphonia = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[features]
default = []
# Enable the `meedya_fingerprint::chromaprint` module which produces
# Chromaprint audio fingerprints suitable for AcoustID lookup. Pulls
# in `rusty-chromaprint` (pure-Rust Chromaprint port) and `symphonia`
# (pure-Rust audio decode). No external `fpcalc` binary required —
# this is the path that enables AcoustID support on ARM Linux where
# no fpcalc binaries exist.
#
# See MWBMPartners/MeedyaDL#353 Phase 3 for the consumer migration.
chromaprint = ["dep:rusty-chromaprint", "dep:symphonia", "dep:base64"]
