[package]
name = "meedya-lyrics"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Meedya Core — LRCLIB client, LRC parser/writer, and lyrics write targets"

[dependencies]
async-trait = "0.1"
lofty = { workspace = true }
meedya-metadata = { workspace = true }
quick-xml = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = { workspace = true }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
