[package]
name = "meedya-metadata"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MeedyaSuite-core — unified metadata provider traits, tag registry, credential management, and provider infrastructure"

[features]
default = ["providers"]
providers = ["reqwest", "governor", "fuzzy-matcher"]
keyring-credentials = ["keyring"]

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "fs"] }
tracing = "0.1"
toml = "0.8"
lofty = "0.22"

# Optional: provider infrastructure
reqwest = { version = "0.12", features = ["json"], optional = true }
governor = { version = "0.8", optional = true }
fuzzy-matcher = { version = "0.3", optional = true }
keyring = { version = "3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
