[package]
name = "meedya-metadata"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Meedya Core — tag schemas, metadata read/write, TOML tag registry"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
lofty = { workspace = true }
meedya-codecs = { workspace = true }
meedya-fingerprint = { workspace = true }
