[package]
name = "meedya-metadata"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MeedyaSuite Core — config-driven metadata tagging for M4A/MP4 files"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
mp4ameta = "0.13"
log = "0.4"
