[package]
name = "meedya-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Meedya Core — shared metadata provider framework"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
governor = { workspace = true }
tracing = { workspace = true }
meedya-codecs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
keyring-credentials = ["dep:keyring"]

[dependencies.keyring]
version = "3"
optional = true
