[package]
name = "meedya-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Meedya Core — shared metadata provider framework"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
governor = { workspace = true }
tracing = { workspace = true }
fuzzy-matcher = { workspace = true }
meedya-codecs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = []
keyring-credentials = ["dep:keyring"]

# Per-provider features. Each adds a single provider module under
# `providers/<name>.rs`. Apps opt into only what they need; the default
# feature set ships ZERO providers so a consumer that just wants the
# `MetadataProvider` trait + infrastructure has no extra build cost.
provider-musicbrainz    = []
provider-spotify        = ["dep:oauth2"]
provider-apple-music    = ["dep:jsonwebtoken"]
provider-deezer         = []
provider-tmdb           = []
provider-thetvdb        = []
provider-omdb           = []
provider-apple-tv       = []
provider-itunes-store   = []
provider-apple-podcasts = []
provider-isrc           = []
provider-eidr           = []
provider-iswc           = []

# Convenience: enable all real providers in one go.
provider-all = [
    "provider-musicbrainz",
    "provider-spotify",
    "provider-apple-music",
    "provider-deezer",
    "provider-tmdb",
    "provider-thetvdb",
    "provider-omdb",
    "provider-apple-tv",
    "provider-itunes-store",
    "provider-apple-podcasts",
    "provider-isrc",
    "provider-eidr",
    "provider-iswc",
]

[dependencies.keyring]
version = "3"
optional = true

[dependencies.oauth2]
version = "5"
optional = true

[dependencies.jsonwebtoken]
version = "10"
optional = true
